--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,15 +1,20 @@
-version: 0.1.{build}
+version: build-{build}
 image: Visual Studio 2017
 configuration: Release
+
+install:
+- choco install gitversion.portable -pre -y
+
 before_build:
+- cmd: gitversion /l console /output buildserver
 - cmd: nuget restore
-build:
-  publish_nuget: true
-  publish_nuget_symbols: true
-  verbosity: minimal
+- cmd: dotnet build  -c Release /p:Version=%GitVersion_FullSemVer% /p:PackageVersion=%GitVersion_NuGetVersion%
+
 deploy:
   provider: NuGet
   api_key:
     secure: dXqr4tDaQmyI/pELVztsegQdf/v2AyuVUbgMdfwlxFPPLkTR/xof90yq/rvgzlFZ
   skip_symbols: false
   artifact: /.*\.nupkg/
+  on:
+    appveyor_repo_tag: true
